[gd_scene load_steps=3 format=3 uid="uid://budkskvtsddp2"]

[ext_resource type="Script" path="res://scenes/guns/pizza_bow/pizza_arrow.gd" id="1_jjxku"]
[ext_resource type="Texture2D" uid="uid://bfjm04ajy25v1" path="res://props/GunSprites/pizza_arrow.png" id="2_lon2y"]

[node name="PizzaArrow" type="Area2D" groups=["PizzaBullets"]]
position = Vector2(1, 0)
gravity = 500.0
script = ExtResource("1_jjxku")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(-19, 2)
scale = Vector2(0.22, 0.234)
texture = ExtResource("2_lon2y")

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
position = Vector2(-4.36364, 7.55592)
scale = Vector2(0.163683, 0.152575)
polygon = PackedVector2Array(-6.76891, 21.3441, 128.609, -49.8029, -6.76891, -113.835, -19.5368, -81.3403, -20.3067, -21.3441)

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="."]
position = Vector2(-18.5, 0.999999)
scale = Vector2(3.65, 1.3)

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="body_shape_entered" from="." to="." method="_on_body_shape_entered"]
[connection signal="screen_exited" from="VisibleOnScreenNotifier2D" to="." method="_on_visible_on_screen_notifier_2d_screen_exited"]
